# freya

./: .gitignore  README.md  bun.lockb  package-lock.json  package.json  svelte.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  playlist.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: player-controls.tsx  playlist-view.tsx  theme-provider.tsx
src/lib/components/: MusicHeader.svelte  PlayerControls.svelte  PlaylistView.svelte
src/lib/components/ui/tabs/: tabs-content.svelte
src/routes/: +page.svelte
